
    HW/SW-Inventory:
    * 0643 windows inventory: OS now contains the install date, reg_uninstall now contains the path...
            NOTE: Please refer to the migration notes!
    * 0652 windows software inventory gives some more details about OS and installed software...
            NOTE: Please refer to the migration notes!


1.2.5i5:
    Core & Setup:
    * 1012 Fix quoting of backslashes in custom checks with nagios core...
            NOTE: Please refer to the migration notes!
    * 1038 Massive speedup of cmk --snmptranslate
    * 1035 FIX: Do not fail on errors in *.mk files anymore - except in interactive mode...
    * 0174 FIX: Fixed appending of --keepalive-fd parameters to checkhelpers...
    * 1053 FIX: Fixed events check always being reporting OK state...
    * 1045 FIX: Gracefully restart check_mk helpers in case of memory leak...
    * 0633 FIX: diskstat: fixed performance data of old legacy disk IO read/write data...

    Checks & Agents:
    * 0168 f5_bigip_pool: Added Wato configuration...
    * 0995 raritan_pdu_outletcount: new check for outlet count of Raritan PX-2000 family PDUs
    * 0169 websphere_mq_channels,ebsphere_mq_queues: New Checks to monitor IBM Websphere MQ Queues and Channels...
    * 1034 Always provide also 64 bit version of Windows agent
    * 0170 hp_proliant_power: New check to monitor the Power Meter on Prolaint Servers and iLO Boards
    * 0172 zfsget: Check is now usable in cluster_mode...
    * 1039 aix_diskiod: new check for disk IO on AIX
    * 0997 New checks and a special agent for ALLNET IP Sensoric devices...
    * 0175 logwatch.groups: New logwatch subcheck who can be used to group logfiles together....
    * 1041 aix_memory: new check for RAM and SWAP on AIX
    * 0998 ibm_imm_health: Trying to recognice newer versions of IBM IMM now too
    * 0628 raritan_pdu_inlet: now also monitors the three phases of the inlet
    * 1073 sni_octopuse_cpu: added PNP graph definition and Perf-O-Meter